# translate_speach

./: .gitignore  Dockerfile  README.md  enrollment_temp.sh  pyproject.toml  run.py  test_enrollment.sh
android/: setup.sh  translator.py
config/: voice_profile.npy
scripts/: install.sh  uninstall.sh
src/: audio_devices.py  cli.py  config.py  engine.py  enrollment.py  gui.py  menubar.py  mt.py  speaker_aware_translator.py  speaker_id.py  streams.py  stt.py  tts.py  vad.py  web_server.py
web/: index.html
web/static/: app.js  style.css
